--- a/package.json
+++ b/package.json
@@ -30,13 +30,20 @@
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
+    "paypal-checkout": "^4.0.300",
+    "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-paypal-button-v2": "^2.4.1",
     "react-slick": "^0.25.2",
     "reactstrap": "^8.1.1",
+    "rimraf": "^3.0.0",
     "should": "^13.2.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
     "supertest": "^4.0.2"
   },
-  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
+  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme",
+  "devDependencies": {
+    "prop-types": "^15.7.2"
+  }
 }
