--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-paypal-button-v2": "^2.4.1",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-slick": "^0.25.2",
     "reactstrap": "^8.1.1",
     "rimraf": "^3.0.0",
