--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "mocha": "^6.2.1",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.7.8",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "paypal-checkout": "^4.0.300",
