--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "form-data": "^2.5.1",
     "instafeed.js": "^1.4.1",
@@ -38,13 +39,14 @@
     "nodemon": "^1.18.10",
     "origen-react-instagram-feed": "0.0.3",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-slick": "^0.25.2",
     "react-helmet": "^5.2.1",
     "react-instafeed": "^1.0.0",
     "react-instagram-embed": "^1.5.0",
     "react-load-script": "0.0.6",
     "react-native": "^0.61.4",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-popup": "^0.10.0",
+    "react-slick": "^0.25.2",
     "reactstrap": "^8.1.1",
     "recompose": "^0.30.0",
     "should": "^13.2.3",
@@ -54,5 +56,9 @@
     "utility": "^1.16.1",
     "xhr": "^2.5.0"
   },
-  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
+  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme",
+  "devDependencies": {
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0"
+  }
 }
