Changed Payment option

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.6.0",
+    "axios": "^0.19.0",
     "babel": "^6.23.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "final-form": "^4.18.6",
     "form-data": "^2.5.1",
     "instafeed.js": "^1.4.1",
     "jquery": "^3.4.1",
@@ -38,19 +40,29 @@
     "node-fetch": "^2.6.0",
     "nodemon": "^1.18.10",
     "origen-react-instagram-feed": "0.0.3",
+    "payment": "^2.3.0",
+    "prop-types": "^15.7.2",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-credit-card-input": "^1.1.5",
+    "react-credit-cards": "^0.8.0",
+    "react-final-form": "^6.3.3",
     "react-helmet": "^5.2.1",
     "react-instafeed": "^1.0.0",
     "react-instagram-embed": "^1.5.0",
     "react-load-script": "0.0.6",
     "react-native": "^0.61.4",
+    "react-payment-request-api": "^3.1.0",
     "react-paypal-express-checkout": "^1.0.5",
     "react-popup": "^0.10.0",
     "react-slick": "^0.25.2",
+    "react-social-icons": "^4.1.0",
+    "react-stripe-checkout": "^2.6.3",
+    "react-stripe-elements": "^6.0.1",
     "reactstrap": "^8.1.1",
     "recompose": "^0.30.0",
     "should": "^13.2.3",
     "slick-carousel": "^1.8.1",
+    "stripe": "^7.14.0",
     "styled-components": "^4.4.1",
     "supertest": "^4.0.2",
     "utility": "^1.16.1",
