--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "mocha": "^6.2.1",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.7.13",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.18.10",
@@ -52,6 +52,7 @@
     "react-load-script": "0.0.6",
     "react-native": "^0.61.4",
     "react-payment-request-api": "^3.1.0",
+    "react-paypal-button-v2": "^2.6.0",
     "react-paypal-express-checkout": "^1.0.5",
     "react-popup": "^0.10.0",
     "react-slick": "^0.25.2",
